--- a/app/src/main/res/layout/activity_photo_detail.xml
+++ b/app/src/main/res/layout/activity_photo_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="me.kristoprifti.android.flickrbrowser.PhotoDetailActivity">
+    tools:context="me.kristoprifti.android.flickrbrowser.activities.PhotoDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
