--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -15,7 +15,8 @@
         android:layout_weight="1"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/placeholder_image"
-        tools:ignore="VectorDrawableCompat"/>
+        tools:ignore="VectorDrawableCompat"
+        android:contentDescription="@string/browse_image_description"/>
 
     <TextView
         android:id="@+id/title"
@@ -24,5 +25,5 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_weight="2"
-        android:text="TextView"/>
+        tools:text="Empty Textview"/>
 </LinearLayout>
