--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="me.kristoprifti.android.flickrbrowser.MainActivity"
+    tools:context="me.kristoprifti.android.flickrbrowser.activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <android.support.v7.widget.RecyclerView
@@ -22,5 +22,6 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:id="@+id/recycler_view"/>
 </android.support.constraint.ConstraintLayout>
