--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="me.kristoprifti.android.flickrbrowser.PhotoDetailActivity"
+    tools:context="me.kristoprifti.android.flickrbrowser.activities.PhotoDetailActivity"
     tools:showIn="@layout/activity_photo_detail">
 
     <ScrollView
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView"/>
+                    tools:text="TextView"/>
 
                 <ImageView
                     android:id="@+id/photo_image"
@@ -41,21 +41,23 @@
                     android:layout_margin="8dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/placeholder_image"
-                    tools:ignore="VectorDrawableCompat"/>
+                    tools:ignore="VectorDrawableCompat"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/browse_image_description"/>
 
                 <TextView
                     android:id="@+id/photo_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView"/>
+                    tools:text="TextView"/>
 
                 <TextView
                     android:id="@+id/photo_tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView"/>
+                    tools:text="TextView"/>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
